fix some align and add favicon

--- a/editor/sass/screen.scss
+++ b/editor/sass/screen.scss
@@ -340,7 +340,7 @@ body{
   .actionButton {
     position: absolute;
     background-color: rgb(209, 209, 209);
-    padding: 3px 3px 1px 3px;
+    padding: 2px 3px 1px 3px;
     @include border-radius(2px, 2px);
     color: #FFF;
     font-size: 8px;
