--- a/editor/sass/scroll.scss
+++ b/editor/sass/scroll.scss
@@ -189,7 +189,7 @@ div#credits {
 
   a { color: #ff7373; }
   span{
-    padding: 13px 0 0 0;
+    padding: 18px 0 0 0;
     position: absolute;
     font-size: 12px;
     text-transform: uppercase;
