--- a/editor/sass/slides.scss
+++ b/editor/sass/slides.scss
@@ -143,9 +143,11 @@ div#credits{
   height: 44px;
   background-color: #FFF;
   z-index: 1000001;
-
+  a {
+     color: #ff7373;
+  }
   span{
-    padding: 17px 0 0 0;
+    padding: 18px 0 0 0;
     position: absolute;
     font-size: 12px;
     text-transform: uppercase;
